manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: referidosfront
spec:
    type: ClusterIP
    ports:
    - port: 3000
    selector:
        app: referidos
