manifests/servicetest.yml
apiVersion: v1
kind: Service
metadata:
  name: service-referidos-front
  namespace: ingress-transversal
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ExternalName
  sessionAffinity: None
  externalName: referidosfront.referidos-whatsapp.svc.cluster.local
