manifests/deployment-prod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: referidos
  name: referidos
  namespace: referidos-whatsapp
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: referidos
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: referidos
    spec:
      containers:
      - env:
        image: aproddevopsrc.azurecr.io/referidos
        imagePullPolicy: Always
        name: referidos
        ports:
        - containerPort: 3000
          name: 3000tcp01
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: referidos
  namespace: referidos-whatsapp
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - referidos-whatsapp-prod.telefonicawebsites.co
      secretName: tls-telefonicawebsites-co
  rules:
    - host: referidos-whatsapp-prod.telefonicawebsites.co
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: referidosfront
                port:
                  number: 3000
---
apiVersion: v1
kind: Service
metadata:
    name: referidosfront
spec:
    type: ClusterIP
    ports:
    - port: 3000
    selector:
        app: referidos
